--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_cube: ^0.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   just_audio: ^0.9.31
+  cubixd: ^0.1.1
+  provider: ^6.1.1
+  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +68,7 @@ flutter:
   assets:
       - assets/images/
       - assets/audios/
+      - assets/videos/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
