--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cubixd: ^0.1.1
   provider: ^6.1.1
   video_player: ^2.8.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
