--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   flutter_launcher_icons: "^0.9.2"
   video_player: ^2.2.17
   shared_preferences: ^2.0.12
+  audioplayers: ^5.2.1
+  just_audio: ^0.9.36
+  flutter_ffmpeg: ^0.4.2
 
 flutter_icons:
   android: true
@@ -45,7 +48,7 @@ flutter_icons:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  just_audio: ^0.9.31
+  # just_audio: ^0.9.31
   cubixd: ^0.1.1
   provider: ^6.1.1
   video_player: ^2.8.1
